# ssbu-match-up-finder

./: .gitignore  README.md  lobbies.db  package-lock.json
backend/: .env  Cargo.toml  app.js  database.db  database.js  lobbies.db  package.json  server.js
backend/config/: index.js  passport.js
backend/middleware/: authenticateToken.js
backend/models/: Lobby.js  User.js
backend/routes/: auth.js  lobbies.js  stats.js  users.js
backend/sockets/: index.js  lobbySocket.js
backend/src/: db_manager.rs  main.rs
backend/utils/: logger.js
frontend/: angular.json  package-lock.json  package.json
frontend/src/: colors.scss  index.html  styles.scss
frontend/src/app/: app.component.html  app.component.scss  app.component.ts  app.config.ts  app.routes.ts  auth.guard.ts  auth.interceptor.ts  auth.service.ts  character.ts  lobby.service.ts  users.service.ts
frontend/src/app/pages/auth-success/: auth-success.component.html  auth-success.component.spec.ts  auth-success.component.ts
frontend/src/app/pages/create/: create.component.html  create.component.scss  create.component.ts
frontend/src/app/pages/home/: home.component.html  home.component.scss  home.component.ts
frontend/src/app/pages/lobby/: lobby.component.html  lobby.component.scss  lobby.component.ts
frontend/src/app/pages/login/: login.component.html  login.component.scss  login.component.ts
frontend/src/app/pages/profile/: profile.component.html  profile.component.scss  profile.component.ts
frontend/src/environments/: enviroment.ts  environment.ts
(+7 files in other folders)
