[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "*"
tokio = { version = "*", features = ["full"] }
tower = { version = "*", features = ["full"] }
hyper = "*"
tokio-rusqlite = "*"
uuid = { version = "*", features = ["v4", "fast-rng"] }
serde = { version = "*", features = ["derive"]}
serde_json = "*"
